--- a/email_analytics_pandas.ipynb
+++ b/email_analytics_pandas.ipynb
@@ -517,13 +517,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "59677d15",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ------------------------------------------------------------\n",
-    "# Build LangGraph agent\n",
+    "# Build LangGraph agent #####&&&\n",
     "# ------------------------------------------------------------\n",
     "def build_outage_agent_graph():\n",
     "    graph = StateGraph(AgentState)\n",
